--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,15 +7,79 @@
         <title>{% block title %}Put to Bed{% endblock %}</title>
 
         {% stylesheets '//cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css'
-                       '../app/Resources/public/css/global.css' %}
+                       '../app/Resources/public/css/global.css'
+                       '../app/Resources/public/css/navbar.css' %}
         <link rel="stylesheet" href="{{asset_url}}"/>
         {% endstylesheets %}
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-    <a href="{{ path('homepage') }}">Home</a>
+    <div class="container">
+
+{% block nav %}
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="{{ path('homepage') }}">Home</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ path('user') }}">Users</a></li>
+            <li><a href="{{ path('role') }}">Roles</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li>
+              <a href="{{ path('reports_activityincome') }}">
+                Activity Income
+              </a>
+            </li>
+            <li>
+              <a href="{{ path('reports_carhours') }}">
+                Car Hours
+              </a>
+            </li>
+            <li>
+              <a href="{{ path('dailyoperatingexpenses') }}">
+                Daily Operating Expenses
+              </a>
+            </li>
+            <li>
+              <a href="{{ path('reports_driverpayroll') }}">
+                Driver Payroll
+              </a>
+            </li>
+            <li>
+              <a href="{{ path('operatingexpenses') }}">
+                Operating Expenses
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+{% endblock %}
+
         {% block body %}{% endblock %}
+    </div>
         {% javascripts '//cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js'
                        '../app/Resources/public/js/global.js' %}
 
