--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,13 +35,6 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="{{ path('user') }}">Users</a></li>
-            <li><a href="{{ path('role') }}">Roles</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
@@ -70,6 +63,19 @@
               </a>
             </li>
           </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Users <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="{{ path('user') }}">Users</a></li>
+            <li><a href="{{ path('role') }}">Roles</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Schedules</a></li>
+        <li>
+          <a href="{{ path('login') }}">
+            <small>Login<span class="glyphicon glyphicon-chevron-right"></span></small>
+          </a>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
