global background color

--- a/web/css/65374fe.css
+++ b/web/css/65374fe.css
@@ -20,6 +20,9 @@ table.dataTable{clear:both;margin-top:6px !important;margin-bottom:6px !importan
 
 
 
+body {
+  background: rgb(242, 242, 242);
+}
 
 .navbar-default {
   background: rgb(0, 153, 255);
