--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,7 +71,7 @@
             <li><a href="{{ path('role') }}">Roles</a></li>
           </ul>
         </li>
-        <li><a href="#">Schedules</a></li>
+        <li><a href="{{ path('scheduleitem') }}">Schedules</a></li>
         <li>
           <a href="{{ path('login') }}">
             <small>Login<span class="glyphicon glyphicon-chevron-right"></span></small>
