--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -8,7 +8,7 @@
             </div>
         <dl class="list-group">
           <dd class="list-group-item  text-center">
-            <a href="#" class="btn btn-info">Schedules (TODO)</a>
+            <a href="{{ path('scheduleitem') }}" class="btn btn-info">Schedules</a>
           </dd>
           <dd class="list-group-item  text-center">
             <a href="{{ path('reports') }}" class="btn btn-info">Reports</a>
