--- a/src/AppBundle/Resources/views/ActivityIncome/index.html.twig
+++ b/src/AppBundle/Resources/views/ActivityIncome/index.html.twig
@@ -7,10 +7,10 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Farescollected</th>
-                <th>Tipescollected</th>
-                <th>Tripsscheduled</th>
-                <th>Tripsnotscheduled</th>
+                <th>Fares collected</th>
+                <th>Tips collected</th>
+                <th>Trips scheduled</th>
+                <th>Trips not scheduled</th>
                 <th>Actions</th>
             </tr>
         </thead>
