--- a/src/AppBundle/Resources/views/ActivityIncome/show.html.twig
+++ b/src/AppBundle/Resources/views/ActivityIncome/show.html.twig
@@ -10,19 +10,19 @@
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
-                <th>Farescollected</th>
+                <th>Fares collected</th>
                 <td>{{ entity.faresCollected }}</td>
             </tr>
             <tr>
-                <th>Tipescollected</th>
+                <th>Tips collected</th>
                 <td>{{ entity.tipesCollected }}</td>
             </tr>
             <tr>
-                <th>Tripsscheduled</th>
+                <th>Trips scheduled</th>
                 <td>{{ entity.tripsScheduled }}</td>
             </tr>
             <tr>
-                <th>Tripsnotscheduled</th>
+                <th>Trips not scheduled</th>
                 <td>{{ entity.tripsNotScheduled }}</td>
             </tr>
         </tbody>
