--- a/src/AppBundle/Resources/views/DriverPayroll/index.html.twig
+++ b/src/AppBundle/Resources/views/DriverPayroll/index.html.twig
@@ -7,14 +7,14 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Pickuptime</th>
-                <th>Dropofftime</th>
-                <th>Breakhours</th>
-                <th>Numjourneys</th>
-                <th>Workmilesdriven</th>
-                <th>Leisuremilesdriven</th>
-                <th>Farescollected</th>
-                <th>Tipscollected</th>
+                <th>Pickup time</th>
+                <th>Dropoff time</th>
+                <th>Break hours</th>
+                <th># journeys</th>
+                <th>Work miles driven</th>
+                <th>Leisure miles driven</th>
+                <th>Fares collected</th>
+                <th>Tips collected</th>
                 <th>Actions</th>
             </tr>
         </thead>
