--- a/src/AppBundle/Resources/views/DriverPayroll/show.html.twig
+++ b/src/AppBundle/Resources/views/DriverPayroll/show.html.twig
@@ -10,35 +10,35 @@
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
-                <th>Pickuptime</th>
+                <th>Pickup time</th>
                 <td>{{ entity.pickupTime|date('Y-m-d H:i:s') }}</td>
             </tr>
             <tr>
-                <th>Dropofftime</th>
+                <th>Dropoff time</th>
                 <td>{{ entity.dropOffTime|date('Y-m-d H:i:s') }}</td>
             </tr>
             <tr>
-                <th>Breakhours</th>
+                <th>Break hours</th>
                 <td>{{ entity.breakHours }}</td>
             </tr>
             <tr>
-                <th>Numjourneys</th>
+                <th># journeys</th>
                 <td>{{ entity.numJourneys }}</td>
             </tr>
             <tr>
-                <th>Workmilesdriven</th>
+                <th>Work miles driven</th>
                 <td>{{ entity.workMilesDriven }}</td>
             </tr>
             <tr>
-                <th>Leisuremilesdriven</th>
+                <th>Leisure miles driven</th>
                 <td>{{ entity.leisureMilesDriven }}</td>
             </tr>
             <tr>
-                <th>Farescollected</th>
+                <th>Fares collected</th>
                 <td>{{ entity.faresCollected }}</td>
             </tr>
             <tr>
-                <th>Tipscollected</th>
+                <th>Tips collected</th>
                 <td>{{ entity.tipsCollected }}</td>
             </tr>
         </tbody>
