--- a/src/AppBundle/Resources/views/OperatingExpenses/index.html.twig
+++ b/src/AppBundle/Resources/views/OperatingExpenses/index.html.twig
@@ -8,8 +8,8 @@
             <tr>
                 <th>Id</th>
                 <th>Trips</th>
-                <th>Milesdriven</th>
-                <th>Incomeearnedmiles</th>
+                <th>Miles driven</th>
+                <th>Income earning miles</th>
                 <th>Actions</th>
             </tr>
         </thead>
