--- a/src/AppBundle/Resources/views/User/index.html.twig
+++ b/src/AppBundle/Resources/views/User/index.html.twig
@@ -8,8 +8,8 @@
             <tr>
                 <th>Id</th>
                 <th>Username</th>
-                <th>Fname</th>
-                <th>Lname</th>
+                <th>First name</th>
+                <th>Last name</th>
                 <th>Actions</th>
             </tr>
         </thead>
