--- a/src/AppBundle/Resources/views/ScheduleItem/show.html.twig
+++ b/src/AppBundle/Resources/views/ScheduleItem/show.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Schedule Item</h1>
 
-    <table class="record_properties">
+    <table class="table record_properties">
         <tbody>
             <tr>
                 <th>Id</th>
