--- a/src/AppBundle/Resources/views/User/index.html.twig
+++ b/src/AppBundle/Resources/views/User/index.html.twig
@@ -19,7 +19,6 @@
     <table class="table records_list">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Username</th>
                 <th>First name</th>
                 <th>Last name</th>
@@ -29,8 +28,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('user_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.username }}</td>
+                <td><a href="{{ path('user_show', { 'id': entity.id }) }}">{{ entity.username }}</a></td>
                 <td>{{ entity.fname }}</td>
                 <td>{{ entity.lname }}</td>
                 <td>
